# test

./: 1xcore.sh  1xguard.sh  Prompt.md  README.md  attributes.json  build-artifact--.txt  characters.json  color_system_preview.html  config.yaml  config.yaml.example  dd.sh  filemanager.sh  ghostery.txt  glocaltext_config.example.yaml  index.html  kejilion.sh  novakit.html  pyproject.toml  release_notes.md  test.css  test.html  test.sh  xray-shell.sh  圖片縮時.html
.github/: README.md  actions-config.yml  release-manifest.toml  release.toml
1x/: 1xcore.sh
Cortex Protocol/: cortex.md  custom_modes.yaml  mcp_settings.json  roo_task_nov-12-2025_11-02-54-pm.md  roo_task_nov-13-2025_12-22-16-am.md  settings.json
INPUT/: 1105_1769420293.json  1106_1769420297.json  1107_1769420300.json  1219_1769420302.json  asset.json  localization.json
KejiLion/: kejilion.sh
WUWA Echos/: aggregate_echos.py  analyzer.py  asset.json  assets.json  bundle.py  echos.json  fetcher.py  get_page.py  growth_table.json  index.html  input.html  localization.json  parser.py  parser_resonators.py  parser_set.py  parser_sonata.py  plan.md  resonators.html  resonators_list.json  sonata.html  sync.py  凌冽決斷之心.json  凝夜白霜.json  (+12 more)
nob/: pyproject.toml
nob/glocaltext/cli/: main.py
nob/glocaltext/core/: cache.py  l10n.py  sync.py
nob/glocaltext/core/translators/: base.py  deep_translator.py  gemini.py  ollama.py  openai.py
nob/src/GlocalText.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nob/src/glocaltext/core/: compiler.py  config.py  i18n.py
nob/src/glocaltext/utils/: logger.py
(+180 files in other folders)
